--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -29,6 +29,7 @@
 .cluster-info {
   width: 100%;
   height: 100%;
+  margin-top: 30px;
   .left-col {
     width: 35%;
     max-width: 35%;
@@ -44,13 +45,12 @@
 }
 
 .info-card > .menu-trigger {
-  background: transparent;
   background: #d7d7d7;
   color: #666;
   outline: none;
   cursor: pointer;
   border-radius: 8px;
-
+  margin: 5px;
   &:hover {
     background: #666;
     color: #fff;
